<resources>
    <string name="app_name">MinhaProva</string>
    <string name="button">Button</string>
    <string name="textview">TextView</string>
    <string name="cancelar">Cancelar</string>
    <string name="name">Name</string>
    <string name="salvar">Salvar</string>
    <string name="anterior">Anterior</string>
    <string name="proximo">Proximo</string>
    <string name="ok">ok</string>
    <string name="nota">Nota</string>
    <string name="ano">Ano</string>
    <string name="nome">Nome</string>
    <string name="titulo">Titulo</string>
    <string name="Titulo">Titulo</string>
    <string name="Autor">Autor</string>
    <string name="Ano">Ano</string>
    <string name="Nota">Nota</string>
    <string name="button2">button2</string>
    <string name="button1">button1</string>
    <string name="button3">button3</string>
    <string name="button4">button4</string>
</resources>