<?xml version="1.0" encoding="utf-8"?>
<layout>
<LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ActionActivity3" android:orientation="vertical">

    <TextView
            android:text="@string/Titulo"
            android:layout_width="match_parent"
            android:layout_height="39dp" android:id="@+id/textNome"/>
    <TextView
            android:text="@string/Autor"
            android:layout_width="match_parent"
            android:layout_height="45dp" android:id="@+id/textAutor"/>
    <TextView
            android:text="@string/Ano"
            android:layout_width="match_parent"
            android:layout_height="43dp" android:id="@+id/textAno"/>
    <TextView
            android:text="@string/Nota"
            android:layout_width="match_parent"
            android:layout_height="56dp" android:id="@+id/textNota"/>

    <LinearLayout android:layout_width="match_parent" android:layout_height="match_parent">

        <Button
                android:text="@string/anterior"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" android:id="@+id/previousButton" android:layout_weight="1"/>
        <Button
                android:text="@string/proximo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" android:id="@+id/nextButton" android:layout_weight="1"/>
    </LinearLayout>
</LinearLayout>
</layout>