<?xml version="1.0" encoding="utf-8"?>
<layout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        tools:context=".MainActivity">
    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:gravity="center" android:id="@+id/mainLayout">

        <Button
                android:text="@string/button1"
                android:layout_width="200dp"
                android:layout_height="wrap_content" android:id="@+id/button1"/>
        <Button
                android:text="@string/button2"
                android:layout_width="200dp"
                android:layout_height="wrap_content" android:id="@+id/button2"/>
        <Button
                android:text="@string/button3"
                android:layout_width="200dp"
                android:layout_height="wrap_content" android:id="@+id/button3"/>
        <Button
                android:text="@string/button4"
                android:layout_width="200dp"
                android:layout_height="wrap_content" android:id="@+id/button4"/>
        <TextView
                android:text="@string/textview"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" android:id="@+id/text1"/>
        <TextView
                android:text="@string/textview"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" android:id="@+id/text2"/>

    </LinearLayout>
</layout>